[package]
name = "ironyy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
base64 = "0.22.1"
clearscreen = "4.0.2"
easy_totp = "0.4"
ellipse = "0.2.0"
itertools = "0.14.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.3.0"